# TemplateOpenGL

./: .gitignore  CMakeLists.txt
resources/shaders/: triangle.frag
src/: main.cpp
src/graphics/: OpenGLPlatform.cpp  OpenGLPlatform.h  Shader.cpp  Shader.h  Triangle.cpp  Triangle.h
